# tree-sitter-mayfig

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  readme.md  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mayfig.pc.in
bindings/c/tree_sitter/: tree-sitter-mayfig.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mayfig/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMayfigTests/: TreeSitterMayfigTests.swift
queries/: highlights.scm  textobjects.scm
queries/helix/: highlights.scm  indents.scm  rainbows.scm  tags.scm
queries/nvim/: folds.scm  highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: conf.txt
